--- a/sdk/tools/defaults/default_model_config.yaml
+++ b/sdk/tools/defaults/default_model_config.yaml
@@ -101,11 +101,23 @@
 Qwen3.5-35B-A3B-UD-Q8_K_XL/CLINE:
   nseq-max: 1
   incremental-cache: true
+  sampling-parameters:
+    temperature: 0.6
+    top_k: 20
+    top_p: 0.95
+    dry_multiplier: 2.0
+    presence_penalty: 1.5
 
 Qwen3.5-35B-A3B-UD-Q8_K_XL/KILO:
   nseq-max: 3
   incremental-cache: true
-  grammar: hermestoolcalling.grm
+  sampling-parameters:
+    temperature: 0.6
+    top_k: 20
+    top_p: 0.95
+    dry_multiplier: 2.0
+    presence_penalty: 1.5
+    grammar: hermestoolcalling.grm
 
 Qwen3.5-35B-A3B-UD-Q8_K_XL/SPC:
   nseq-max: 1
