--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -110,7 +110,7 @@ Qwen3-Coder-Next-Q8_0/SPC:
 
 # ------------------------------------------------------------------------------
 
-Qwen3.5-35B-A3B-UD-Q8_K_XL/CLINE:
+Qwen_Qwen3.5-35B-A3B-Q8_0/CLINE:
   nseq-max: 1
   incremental-cache: true
   sampling-parameters:
@@ -120,7 +120,7 @@ Qwen3.5-35B-A3B-UD-Q8_K_XL/CLINE:
     dry_multiplier: 2.0
     presence_penalty: 1.5
 
-Qwen3.5-35B-A3B-UD-Q8_K_XL/KILO:
+Qwen_Qwen3.5-35B-A3B-Q8_0/KILO:
   nseq-max: 3
   incremental-cache: true
   sampling-parameters:
@@ -131,7 +131,7 @@ Qwen3.5-35B-A3B-UD-Q8_K_XL/KILO:
     presence_penalty: 1.5
     grammar: hermestoolcalling.grm
 
-Qwen3.5-35B-A3B-UD-Q8_K_XL/SPC:
+Qwen_Qwen3.5-35B-A3B-Q8_0/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
